service/tests/models/products/snapshots/product_fetch/can_find_out_of_stock_products@product_fetch.snap
---
source: tests/models/products/product_fetch.rs
expression: result
---
Ok(
    PaginatedModel {
        data: [
            ProductListItem {
                pid: PID,
                slug: "brushed-wool-scarf",
                name: "Brushed Wool Scarf",
                description: Some(
                    "A warm, softly brushed wool scarf with subtle fringed ends.",
                ),
                information: {
                    "Care": "Dry clean only",
                    "Dimensions": "180 × 30 cm",
                    "Material": "Lambswool",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "accessories",
                    slug: "accessories",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1520903920243-00d872a2d1c9?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "SCARF-GRY-OS",
                        price: 39.99,
                        stock_quantity: 0,
                    },
                ),
                variant_count: 1,
                option_count: 2,
                total_stock: 0,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                slug: "court-leather-sneakers",
                name: "Court Leather Sneakers",
                description: Some(
                    "Low-profile leather sneakers with cushioned insoles.",
                ),
                information: {
                    "Care": "Wipe clean",
                    "Material": "Leather",
                    "Sole": "Rubber",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "shoes",
                    slug: "shoes",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1608231387042-66d1773070a5?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "SNEAKER-WHT-42",
                        price: 89.99,
                        stock_quantity: 0,
                    },
                ),
                variant_count: 2,
                option_count: 2,
                total_stock: 0,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
        ],
        pagination: Pagination {
            page: 1,
            limit: 20,
            total_items: 2,
            total_pages: 1,
            has_next: false,
            has_prev: false,
        },
    },
)
