service/tests/models/products/snapshots/product_fetch/can_find_product_detail_by_pid@product_fetch.snap
---
source: tests/models/products/product_fetch.rs
expression: result
---
Ok(
    ProductDetailResponse {
        id: ID,
        pid: PID,
        name: "Classic Cotton T-shirt",
        description: Some(
            "Soft everyday cotton t-shirt with a relaxed fit.",
        ),
        information: {
            "Care": "Machine wash cold",
            "Fit": "Relaxed",
            "Material": "100% cotton",
        },
        tags: [],
        category: ProductCategorySummary {
            id: ID,
            pid: PID,
            name: "t-shirts",
            slug: "t-shirts",
        },
        pictures: [],
        options: [
            ProductOptionResponse {
                id: ID,
                pid: PID,
                attribute_id: ID,
                attribute_pid: PID,
                attribute_name: "colour",
                attribute_description: Some(
                    "The colour or finish used to distinguish product variants.",
                ),
                display_order: Some(
                    1,
                ),
                created_at: DATE,
            },
            ProductOptionResponse {
                id: ID,
                pid: PID,
                attribute_id: ID,
                attribute_pid: PID,
                attribute_name: "size",
                attribute_description: Some(
                    "The labelled size used to distinguish product variants.",
                ),
                display_order: Some(
                    2,
                ),
                created_at: DATE,
            },
        ],
        variants: [
            ProductVariantDetail {
                id: ID,
                pid: PID,
                sku: "TSHIRT-BLK-M",
                price: 24.99,
                stock_quantity: 32,
                is_default: true,
                options: [
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "colour",
                        attribute_description: Some(
                            "The colour or finish used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "Black",
                        created_at: DATE,
                    },
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "size",
                        attribute_description: Some(
                            "The labelled size used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "M",
                        created_at: DATE,
                    },
                ],
                pictures: [
                    ProductPictureResponse {
                        id: ID,
                        pid: PID,
                        image_link: "https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80",
                        display_order: Some(
                            1,
                        ),
                        created_at: DATE,
                        updated_at: DATE,
                    },
                ],
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductVariantDetail {
                id: ID,
                pid: PID,
                sku: "TSHIRT-BLU-L",
                price: 24.99,
                stock_quantity: 18,
                is_default: false,
                options: [
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "colour",
                        attribute_description: Some(
                            "The colour or finish used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "Marine Blue",
                        created_at: DATE,
                    },
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "size",
                        attribute_description: Some(
                            "The labelled size used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "L",
                        created_at: DATE,
                    },
                ],
                pictures: [
                    ProductPictureResponse {
                        id: ID,
                        pid: PID,
                        image_link: "https://images.unsplash.com/photo-1503341504253-dff4815485f1?auto=format&fit=crop&w=900&q=80",
                        display_order: Some(
                            2,
                        ),
                        created_at: DATE,
                        updated_at: DATE,
                    },
                ],
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
        ],
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
