service/tests/models/products/snapshots/product_fetch/can_find_product_detail_by_slug@product_fetch.snap
---
source: tests/models/products/product_fetch.rs
expression: result
---
Ok(
    ProductDetailResponse {
        id: ID,
        pid: PID,
        slug: "classic-cotton-t-shirt",
        name: "Classic Cotton T-shirt",
        description: Some(
            "Soft everyday cotton t-shirt with a relaxed fit.",
        ),
        information: {
            "Care": "Machine wash cold",
            "Fit": "Relaxed",
            "Material": "100% cotton",
        },
        tags: [],
        category: ProductCategorySummary {
            id: ID,
            pid: PID,
            name: "t-shirts",
            slug: "t-shirts",
        },
        pictures: [],
        options: [
            ProductOptionResponse {
                id: ID,
                pid: PID,
                attribute_id: ID,
                attribute_pid: PID,
                attribute_name: "colour",
                attribute_description: Some(
                    "The colour or finish used to distinguish product variants.",
                ),
                display_order: Some(
                    1,
                ),
                created_at: DATE,
            },
            ProductOptionResponse {
                id: ID,
                pid: PID,
                attribute_id: ID,
                attribute_pid: PID,
                attribute_name: "size",
                attribute_description: Some(
                    "The labelled size used to distinguish product variants.",
                ),
                display_order: Some(
                    2,
                ),
                created_at: DATE,
            },
        ],
        variants: [
            ProductVariantDetail {
                id: ID,
                pid: PID,
                sku: "TSHIRT-BLK-M",
                price: 24.99,
                stock_quantity: 32,
                is_default: true,
                options: [
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "colour",
                        attribute_description: Some(
                            "The colour or finish used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "Black",
                        created_at: DATE,
                    },
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "size",
                        attribute_description: Some(
                            "The labelled size used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "M",
                        created_at: DATE,
                    },
                ],
                pictures: [
                    ProductPictureResponse {
                        id: ID,
                        pid: PID,
                        image_link: "https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=900&q=80",
                        display_order: Some(
                            1,
                        ),
                        created_at: DATE,
                        updated_at: DATE,
                    },
                    ProductPictureResponse {
                        id: ID,
                        pid: PID,
                        image_link: "https://images.unsplash.com/photo-1583743814966-8936f5b7be1a?auto=format&fit=crop&w=900&q=80",
                        display_order: Some(
                            3,
                        ),
                        created_at: DATE,
                        updated_at: DATE,
                    },
                ],
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductVariantDetail {
                id: ID,
                pid: PID,
                sku: "TSHIRT-BLU-L",
                price: 24.99,
                stock_quantity: 18,
                is_default: false,
                options: [
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "colour",
                        attribute_description: Some(
                            "The colour or finish used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "Marine Blue",
                        created_at: DATE,
                    },
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "size",
                        attribute_description: Some(
                            "The labelled size used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "L",
                        created_at: DATE,
                    },
                ],
                pictures: [
                    ProductPictureResponse {
                        id: ID,
                        pid: PID,
                        image_link: "https://images.unsplash.com/photo-1503341504253-dff4815485f1?auto=format&fit=crop&w=900&q=80",
                        display_order: Some(
                            2,
                        ),
                        created_at: DATE,
                        updated_at: DATE,
                    },
                    ProductPictureResponse {
                        id: ID,
                        pid: PID,
                        image_link: "https://images.unsplash.com/photo-1503342217505-b0a15ec3261c?auto=format&fit=crop&w=900&q=80",
                        display_order: Some(
                            4,
                        ),
                        created_at: DATE,
                        updated_at: DATE,
                    },
                ],
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductVariantDetail {
                id: ID,
                pid: PID,
                sku: "TSHIRT-BLK-L",
                price: 24.99,
                stock_quantity: 27,
                is_default: false,
                options: [
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "colour",
                        attribute_description: Some(
                            "The colour or finish used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "Black",
                        created_at: DATE,
                    },
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "size",
                        attribute_description: Some(
                            "The labelled size used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "L",
                        created_at: DATE,
                    },
                ],
                pictures: [
                    ProductPictureResponse {
                        id: ID,
                        pid: PID,
                        image_link: "https://images.unsplash.com/photo-1576566588028-4147f3842f27?auto=format&fit=crop&w=900&q=80",
                        display_order: Some(
                            5,
                        ),
                        created_at: DATE,
                        updated_at: DATE,
                    },
                    ProductPictureResponse {
                        id: ID,
                        pid: PID,
                        image_link: "https://images.unsplash.com/photo-1562157873-818bc0726f68?auto=format&fit=crop&w=900&q=80",
                        display_order: Some(
                            7,
                        ),
                        created_at: DATE,
                        updated_at: DATE,
                    },
                ],
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductVariantDetail {
                id: ID,
                pid: PID,
                sku: "TSHIRT-BLU-M",
                price: 24.99,
                stock_quantity: 16,
                is_default: false,
                options: [
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "colour",
                        attribute_description: Some(
                            "The colour or finish used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "Marine Blue",
                        created_at: DATE,
                    },
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "size",
                        attribute_description: Some(
                            "The labelled size used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "M",
                        created_at: DATE,
                    },
                ],
                pictures: [
                    ProductPictureResponse {
                        id: ID,
                        pid: PID,
                        image_link: "https://images.unsplash.com/photo-1578681994506-b8f463449011?auto=format&fit=crop&w=900&q=80",
                        display_order: Some(
                            6,
                        ),
                        created_at: DATE,
                        updated_at: DATE,
                    },
                ],
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductVariantDetail {
                id: ID,
                pid: PID,
                sku: "TSHIRT-WHT-S",
                price: 25.99,
                stock_quantity: 14,
                is_default: false,
                options: [
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "colour",
                        attribute_description: Some(
                            "The colour or finish used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "White",
                        created_at: DATE,
                    },
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "size",
                        attribute_description: Some(
                            "The labelled size used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "S",
                        created_at: DATE,
                    },
                ],
                pictures: [],
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductVariantDetail {
                id: ID,
                pid: PID,
                sku: "TSHIRT-WHT-XL",
                price: 25.99,
                stock_quantity: 11,
                is_default: false,
                options: [
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "colour",
                        attribute_description: Some(
                            "The colour or finish used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "White",
                        created_at: DATE,
                    },
                    ProductVariantOptionResponse {
                        id: ID,
                        pid: PID,
                        attribute_id: ID,
                        attribute_pid: PID,
                        attribute_name: "size",
                        attribute_description: Some(
                            "The labelled size used to distinguish product variants.",
                        ),
                        attribute_value_id: ID,
                        attribute_value_pid: PID,
                        value: "XL",
                        created_at: DATE,
                    },
                ],
                pictures: [],
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
        ],
        created_at: DATE,
        updated_at: DATE,
        deleted_at: None,
    },
)
