service/tests/models/products/snapshots/product_fetch/can_find_products_by_category_id@product_fetch.snap
---
source: tests/models/products/product_fetch.rs
expression: result
---
Ok(
    PaginatedModel {
        data: [
            ProductListItem {
                pid: PID,
                slug: "mesh-running-trainers",
                name: "Mesh Running Trainers",
                description: Some(
                    "Lightweight trainers with a breathable mesh upper and responsive foam sole.",
                ),
                information: {
                    "Care": "Hand wash",
                    "Sole": "Cushioned foam",
                    "Upper": "Recycled mesh",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "shoes",
                    slug: "shoes",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1552346154-21d32810aba3?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "RUNNER-GRY-42",
                        price: 109.99,
                        stock_quantity: 11,
                    },
                ),
                variant_count: 7,
                option_count: 2,
                total_stock: 62,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
            ProductListItem {
                pid: PID,
                slug: "court-leather-sneakers",
                name: "Court Leather Sneakers",
                description: Some(
                    "Low-profile leather sneakers with cushioned insoles.",
                ),
                information: {
                    "Care": "Wipe clean",
                    "Material": "Leather",
                    "Sole": "Rubber",
                },
                category: ProductCategorySummary {
                    id: ID,
                    pid: PID,
                    name: "shoes",
                    slug: "shoes",
                },
                primary_image: Some(
                    "https://images.unsplash.com/photo-1608231387042-66d1773070a5?auto=format&fit=crop&w=900&q=80",
                ),
                default_variant: Some(
                    ProductVariantSummary {
                        pid: PID,
                        sku: "SNEAKER-WHT-42",
                        price: 89.99,
                        stock_quantity: 9,
                    },
                ),
                variant_count: 7,
                option_count: 2,
                total_stock: 67,
                created_at: DATE,
                updated_at: DATE,
                deleted_at: None,
            },
        ],
        pagination: Pagination {
            page: 1,
            limit: 20,
            total_items: 2,
            total_pages: 1,
            has_next: false,
            has_prev: false,
        },
    },
)
